[gd_scene load_steps=6 format=3 uid="uid://dl7m4rqyj8mck"]

[ext_resource type="Script" uid="uid://1wfu4iuddo25" path="res://game/entities/world/game.gd" id="1_l1rk1"]
[ext_resource type="PackedScene" uid="uid://d34nh3lc1gpb" path="res://game/menu/pause/pause_screen.tscn" id="2_h7iqs"]
[ext_resource type="PackedScene" uid="uid://duxm8n62j2qt6" path="res://game/menu/game_over/game_over_screen.tscn" id="4_4fuuu"]
[ext_resource type="PackedScene" uid="uid://bdcs2ff85qjs4" path="res://game/menu/game_over/victory_screen.tscn" id="4_dxrkv"]
[ext_resource type="PackedScene" uid="uid://ggf76ayl53bb" path="res://game/generators/world_generator.tscn" id="5_dxrkv"]

[node name="Game" type="Node2D"]
script = ExtResource("1_l1rk1")

[node name="PauseScreen" parent="." instance=ExtResource("2_h7iqs")]
process_mode = 2
z_index = 100

[node name="VictoryScreen" parent="." instance=ExtResource("4_dxrkv")]
offset_left = 320.0
offset_top = 172.0
offset_right = 320.0
offset_bottom = 172.0

[node name="GameOverScreen" parent="." instance=ExtResource("4_4fuuu")]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 172.0
offset_right = 320.0
offset_bottom = 172.0

[node name="WorldGenerator" parent="." instance=ExtResource("5_dxrkv")]

[connection signal="continue_game" from="PauseScreen" to="." method="_on_pause_screen_continue_game"]
[connection signal="show_main_menu" from="PauseScreen" to="." method="_show_main_menu"]
[connection signal="show_main_menu" from="VictoryScreen" to="." method="_show_main_menu"]
[connection signal="show_main_menu" from="GameOverScreen" to="." method="_show_main_menu"]
